Changed wrapper height to viewport height, fixed app icon wrapping

--- a/style.css
+++ b/style.css
@@ -8,7 +8,13 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin: 32px;
+    height: 100vh;
+}
+
+@media only screen and (max-width: 1263px) {
+    #wrapper {
+        margin: 32px;
+    }
 }
 
 .description {
@@ -20,6 +26,8 @@ body {
 }
 
 #app-title {
+    display: inline-block;
+    min-width: 315px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
     color: #111111;
